<resources>
    <string name="app_name">唯物</string>


    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="login_title">登录唯物</string>
    <string name="login_phone_country_code">+86</string>
    <string name="login_send_verify_code">发送验证码</string>
    <string name="login_wechat">微信</string>
    <string name="login_weibo">微博</string>
    <string name="login_huawei">华为</string>
    <string name="login_send_verify_code_2">再次发送</string>
    <string name="login_wait_verify_countdown">%d秒后可再次尝试</string>
    <string name="login_gologin">登录</string>
    <string name="login_verifycode_sent">验证码已发送至%s</string>
    <string name="login_weibo_cancel">微博登录已取消</string>
    <string name="login_weibo_ok">微博登录已成功</string>
    <string name="login_wechat_not_install">请先安装微信</string>
    <string name="login_wechat_cancel">微信登录已取消</string>
    <string name="login_wechat_ok">微信登录已成功</string>
    <string name="login_wechat_deny">微信登录已被用户拒绝</string>
    <string name="login_wechat_other">微信登录出错了</string>
    <string name="login_huawei_download_service_title">提示</string>
    <string name="login_huawei_download_service_description">您可能需要安装华为移动服务。如果持续遇到下载失败的提示，建议自行手动下载安装“华为移动服务”。</string>
    <string name="login_huawei_prompt_gotit">我知道了</string>
    <string name="login_huawei_connecting">连接华为移动服务</string>
    <string name="login_huawei_cancel">华为登录已取消</string>
    <string name="login_3rd_party">其他方式登录</string>
    <string name="login_resend_confirm0">再次发送会使上一个验证码失效</string>
    <string name="login_resend_confirm1">要不等等？</string>
    <string name="login_resend_cancel">不发送</string>
    <string name="login_resend_ok">发送</string>
    <string name="login_verifycode_error">您的验证码错了</string>
    <string name="login_verifycode_error_acknowlege">好的</string>

    <!-- 生活研究所 -->
    <string name="lifelab_title">生活研究所</string>
    <string name="lifelab_more">...</string>
    <string name="lifelab_item_artist_title">你可能感兴趣的生活家</string>
    <string name="lifelab_item_artist_article">文章 %d</string>
    <string name="lifelab_item_artist_follower">关注者 %d</string>
    <string name="lifelab_item_desc">本期生活研究所，由%s采集组织</string>
    <string name="article_share_title">分享这篇文章</string>
    <string name="article_hot_discuss">热门评论</string>
    <string name="article_more_discuss">查看更多</string>
    <string name="article_feedback">文章排版出错了？或者有任何建议请</string>
    <string name="article_feedback_link">反馈给我们</string>
    <string name="article_all_comment">全部评论</string>
    <string name="article_psot_comment">发表你的看法</string>
    <string name="lifepost_nodata">还没有人发表看法</string>
    <string name="lifepost_mycomment">我的评论</string>
    <string name="lifepost_title">生活帖</string>
    <string name="addpost_title">说说我的想法</string>
    <string name="addpost_quit_prompt">确定要退出吗</string>
    <string name="addpost_counter_max">140</string>
    <string name="lifepost_del_comment_success">删除成功</string>
    <string name="lifepost_impeach_comment_success">举报成功</string>
    <string name="lifepost_impeach_comment">确定要举报此条吗</string>
    <string name="lifepost_copy_success">复制成功</string>

    <string name="discuss_people_number">人参与讨论</string>
    <string name="lifelab_item_feedback">反馈</string>
    <string name="lifelab_item_share">分享</string>

    <!-- 收藏 -->
    <string name="my_collection">我的收藏</string>
    <string name="articles_collected">文章</string>
    <string name="fav_succeed">收藏成功</string>
    <string name="unfav_succeed">取消收藏成功</string>
    <string name="fav_fail">收藏失败</string>
    <string name="unfav_fail">取消收藏失败</string>

    <!-- 分享 -->
    <string name="share_unknown">分享类型未知 %d</string>
    <string name="share_wechat_friend">微信好友</string>
    <string name="share_wechat_circle">朋友圈</string>
    <string name="share_weibo">微博</string>
    <string name="share_copy_link">复制链接</string>
    <string name="share_more">更多</string>
    <string name="share_weibo_result">分享到微博%s</string>
    <string name="share_wechat_result">分享微信%s</string>
    <string name="share_copylink_result">复制链接%s</string>
    <string name="share_result_succeed">成功</string>
    <string name="share_result_fail">失败</string>
    <string name="share_result_cancel">取消</string>

    <string name="personal_info">个人信息</string>
    <string name="user_nickname">用户昵称</string>
    <string name="user_description">个性签名</string>
    <string name="user_covers">封面图</string>
    <string name="userinfo_save_prompt">您有尚未保存的修改，确认离开吗？</string>
    <string name="userinfo_update_success">用户信息已成功修改</string>
    <string name="userinfo_update_fail">用户信息修改已失败</string>
    <string name="userinfo_leave">离开</string>
    <string name="userinfo_stay">留下</string>
    <string name="userinfo_update_empty">昵称/个性签名最好不要空着哦</string>
    <string name="userinfo_comfirm">好的</string>
    <string name="userinfo_save_comfirm">确认</string>
    <string name="userinfo_save_tips">确认修改信息？</string>

    <string name="share_weibo_error">分享到微博出错，%s</string>

    <string name="prompt_comfirmd">好</string>
    <string name="prompt_denied">不</string>

    <string name="share_title">分享到</string>

    <!-- Home page -->
    <!-- naivgation title -->
    <string name="notlogged">尚未登录</string>
    <string name="home">探索</string>
    <string name="test1">个人养成</string>
    <string name="test2">日常生活</string>
    <string name="test3">家的管理</string>
    <string name="test4">家的升级</string>

    <!--home page content -->
    <string name="popularLoverOfLife">热门生活家</string>
    <string name="latestUpdates">最近更新</string>
    <string name="selectedInstitute">精选研究所</string>
    <string name="read">阅读</string>
    <string name="collection">收藏</string>

    <string name="articles">文章</string>
    <string name="followers">关注者</string>

    <!-- categary -->
    <string name="RelativeLoverOfLife">相关生活家</string>
    <string name="RelativeInstite">生活研究所</string>

    <!--network unavilable-->
    <string name="networkError">亲，网络不给力哦！</string>
    <string name="serverError">亲，服务器开小差啦</string>


    <string name="newVersionAvailable">我们有了新版本！</string>

    <string name="ignore">忽略</string>
    <string name="download">去下载</string>

    <string name="dummy_ads_title">Nintendo Switch</string>
    <string name="dummy_ads_content">买买买 不买不是好任豚</string>

    <!--slide menu items -->

    <string name="home_page">首页</string>
    <string name="all_artists">查看全部生活家</string>
    <string name="all_institutes">查看全部生活研究所</string>
    <string name="talk_to_wewow">跟唯物聊一聊</string>

    <string name="my_favourite">我的收藏</string>
    <string name="my_favourite_artists">我订阅的生活家</string>

    <string name="about">关于唯物</string>
    <string name="share">分享唯物</string>
    <string name="clear_cache">清除缓存</string>
    <string name="logout">退出登录</string>

    <string name="login_to_see_more">登录来收藏和订阅你感兴趣的内容</string>


    <string name="search_hint">输入你感兴趣的内容</string>

    <string name="number_refix">Vol.</string>


    <string name="all_artists_title">全部生活家</string>
    <string name="artists_title">生活家</string>
    <string name="all_artists_subscribed_title">我订阅的生活家</string>


    <string name="subscriber">订阅者</string>

    <string name="type_feedback">在这里提出建议</string>

    <string name="about_1">体面的人生</string>
    <string name="about_2">是在95%的日常生活里善待自己</string>
    <string name="about_3">那些鲜被关注的生活与家</string>
    <string name="about_4">也应该让你上瘾</string>
    <string name="about_5">我们寻找和创造那些值得细细感受的</string>
    <string name="about_6">生活片段</string>
    <string name="about_7">以及构成它们的，</string>
    <string name="about_8">每一个质地出众、</string>
    <string name="about_9">独具匠心的东西</string>
    <string name="about_10">一一一一一一 </string>
    <string name="about_11">一起</string>
    <string name="about_12">认真活</string>

    <string name="title_activity_life_post">LifePostActivity</string>


    <string name="search_result_category_1">文章</string>
    <string name="search_result_category_2">生活研究所</string>
    <string name="search_result_category_3">生活家</string>
    <string name="search_result_category_4">生活贴</string>

    <string name="join_discussion">人参加讨论</string>
    <string name="title_activity_user_info">UserInfoActivity</string>


    <string name="growingio_channel">wewow_android</string>
    <string name="title_activity_show_image">ShowImageActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_collection">MyCollectionActivity</string>

    <string name="ads">广告</string>
    <string name="share_text">生活进阶指南</string>

    <string name="search_with_no_result">没有找到喜欢的内容？</string>
    <string name="tell_wewow">告诉唯物</string>
    <string name="submitted">\u63d0\u4ea4\u6210\u529f</string>
    <string name="no_content">内容不能为空</string>
    <string name="title_activity_add_post">AddPostActivity</string>


    <string name="choose">请选择</string>
    <string name="camera">相机</string>
    <string name="gallery">相册</string>
    <string name="cancel">取消</string>

    <string name="clear_cache_alert_tile">提示</string>
    <string name="clear_cache_alert_content">确定要清除所有缓存数据吗?\n(不会影响您的收藏和订阅）</string>
    <string name="confirm">确定</string>
    <string name="clear_cache_success">清除成功</string>
    <string name="logout_content">确定要退出登录吗</string>

    <string name="search_no_key_word">搜索内容不能为空</string>
    <string name="hot_search_text">热门搜索</string>
    <string name="follow_artist_success">已成功订阅生活家</string>
    <string name="cancel_follow_artist_success">已成功取消订阅生活家</string>
    <string name="bottom_line">我是有底线的</string>
    <string name="please_wait">唯物正在处理您的反馈，请稍等一下~</string>
<!--baidu autoudpate-->
    <string name="no_auto_update_data">无可用更新</string>
    <string name="auto_update">智能升级</string>
    <string name="do_no_udpate">暂不升级</string>

    <string name="network_connection_retry">网络连接失败，按“确认”尝试重新连接。</string>






</resources>
