<menu xmlns:android="http://schemas.android.com/apk/res/android">


    int[] iconResIcon = {R.drawable.home, R.drawable.lover_of_life, R.drawable.life_institue, R.drawable.chat,
    R.drawable.my_favorites, R.drawable.lover_of_life_subscribed, R.drawable.about,
    R.drawable.share_menu, R.drawable.clear_cache, R.drawable.logout};

    <group android:id="@+id/g1">
    <item
        android:id="@+id/home"
        android:icon="@drawable/selector_btn_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/all_artists"
        android:icon="@drawable/selector_btn_all_artists"
        android:title="@string/all_artists"/>
    <item
        android:id="@+id/all_institutes"
        android:icon="@drawable/selector_btn_all_institutes"
        android:title="@string/all_institutes"/>
    <item
        android:id="@+id/talk_to_wewow"
        android:icon="@drawable/selector_btn_chat"
        android:title="@string/talk_to_wewow"/>
    </group>

    <group android:id="@+id/g2">
        <item
            android:id="@+id/my_favourite"
            android:icon="@drawable/selector_btn_favourite"
            android:title="@string/my_favourite"/>
        <item
            android:id="@+id/my_favourite_artists"
            android:icon="@drawable/selector_btn_lover_of_life_subscribed"
            android:title="@string/my_favourite_artists"/>

    </group>

    <group android:id="@+id/g3">
        <item
            android:id="@+id/about"
            android:icon="@drawable/selector_btn_life_about"
            android:title="@string/about"/>
        <item
            android:id="@+id/share"
            android:icon="@drawable/selector_btn_share"
            android:title="@string/share"/>
        <item
            android:id="@+id/clear_cache"
            android:icon="@drawable/selector_btn_clear_cache"
            android:title="@string/clear_cache"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/selector_btn_logout"
            android:title="@string/logout"/>
    </group>
</menu>