<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--banner-->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="192dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v4.view.ViewPager>


                <!-- dots-->
                <LinearLayout
                    android:id="@+id/viewGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="40dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"></LinearLayout>

            </RelativeLayout>

            <!-- navigationBar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="72dp"
                    android:layout_height="52dp"
                    android:gravity="center">
                <TextView
                    android:id="@+id/textViewHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home" />
                    </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewTitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:text="@string/test1" />

                    <TextView
                        android:id="@+id/textViewTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test2" />

                    <TextView
                        android:id="@+id/textViewTitle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test3" />

                    <TextView
                        android:id="@+id/textViewTitle4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test4" />

                </LinearLayout>


            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f7f7f7">


            </LinearLayout>
            </LinearLayout>



        <include layout="@layout/toolbar" />
    </FrameLayout>

</RelativeLayout>
