<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f7f7f7"
        android:orientation="vertical">


        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="344dp"
            android:layout_height="185dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:visibility="gone"
            card_view:cardCornerRadius="2dp">

            </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/popularLoverOfLife"
            android:textColor="#333631"
            android:textSize="14sp" />

        <!-- recommended life lover -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginTop="12dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpagerLayout"
                android:layout_width="fill_parent"
                android:layout_marginLeft="12dp"
                android:background="#f7f7f7"
                android:clipChildren="false"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/latestUpdates"
            android:textColor="#333631"
            android:textSize="14sp" />

        <!-- latest institue -->

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            card_view:cardCornerRadius="2dp">

            <RelativeLayout
                android:id="@+id/layoutLatestInstitue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dummy_latest_life_institue"
                android:padding="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_alignParentBottom="true"
                    android:background="#88000000"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="8dp"
                        android:text="vol.130"
                        android:textColor="#ffffff"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewNum"
                        android:layout_marginLeft="12dp"
                        android:text="清洁厨房水槽"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="@string/read"
                            android:textColor="#FFFFFF"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textViewRead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="8109"
                            android:textColor="#FFFFFF"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="@string/collection"
                            android:textColor="#FFFFFF"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textViewCollection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="1329"
                            android:textColor="#FFFFFF"
                            android:textSize="12sp" />

                    </LinearLayout>


                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/selectedInstitute"
            android:textColor="#333631"
            android:textSize="14sp" />

        <!-- selected institute -->


        <ListView
            android:id="@+id/listViewSelectedInstitute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:choiceMode="singleChoice"

            android:divider="@android:color/transparent"
            android:dividerHeight="12dp" />
    </LinearLayout>
</LinearLayout>